--- a/example/index.html
+++ b/example/index.html
@@ -23,5 +23,5 @@
 <body>
   <h1>React &lt;TextareaAutosize /&gt; component</h1>
   <div id="main"></div>
-  <script src="./index.tsx"></script>
+  <script type="module" src="./index.tsx"></script>
 </body>
